commit ReWork Design - fix new header

--- a/footDmca.html
+++ b/footDmca.html
@@ -81,8 +81,8 @@
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="footFeedback.html#donasi">Donasi</a>
                 <a class="dropdown-item" href="footFeedback.html#feedback">Feedback</a>
-                <a class="dropdown-item" href="footFeedback.html#jasa">Jasa Render</a>
-                <a class="dropdown-item" href="footFeedback.html#jasa">Jasa Gambar</a>
+                <a class="dropdown-item" href="footFeedback.html#jasa">Services</a>
+                
                 <!-- <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="g_page.php">See More...</a> -->
               </div>
@@ -93,7 +93,7 @@
                 Random
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="randomPatchNote.html">Patch Notes</a>
+                <a class="dropdown-item" href="randomPatchNote.html">Patch Notes ༼ つ ◕_◕ ༽つ</a>
                 <a class="dropdown-item" href="" onclick="BlockedTest()">Wangy maker</a>
                 <!-- <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="g_page.php">See More...</a> -->
@@ -157,7 +157,7 @@
                       <p>If you have reason to believe that one of our content is violating your copyrights or some of
                         Search Results references to illegal contents, please send a email for us.<br>
                         Please allow up to a 1-7 business days for an email response. Note that emailing your complaint
-                        to other parties such as our Internet Service Provider, Hosting Provider, and other third party
+                        to other parties such as our Internet Services Provider, Hosting Provider, and other third party
                         will not expedite your request and may result in a delayed response due to the complaint not
                         being filed properly.
                       </p>
@@ -170,7 +170,7 @@
                           is affected.</li>
                         <li>The Claim must be written in English language, it must be understandable and in polite form
                         </li>
-                        <li>The Claim must be sent from a company mail, Claims sent from free service emails like AOL,
+                        <li>The Claim must be sent from a company mail, Claims sent from free Services emails like AOL,
                           Yahoo Gmail, etc. will be rejected</li>
                         <li>You must present an evidence that shows that you are the copyright holder or that you are
                           acting on behalf of the copyright holder</li>
@@ -183,7 +183,7 @@
                       </ul>
                       <h2>Good Copyright Claim example:</h2>
                       <p>This is a notice in accordance with the Online Copyright Infringement Liability Limitation Act
-                        (OCILLA) a part of the Digital Millennium Copyright Act of 1998 requesting the service providers
+                        (OCILLA) a part of the Digital Millennium Copyright Act of 1998 requesting the Services providers
                         to be held strictly liable for the acts of their users & immediately cease the access to
                         copyrighted material.</p>
                       <p>We have found an infringing material in your website which indeed is our movie ‘The Movie’
