--- a/footFeedback.html
+++ b/footFeedback.html
@@ -81,8 +81,8 @@
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="footFeedback.html#donasi">Donasi</a>
                 <a class="dropdown-item" href="footFeedback.html#feedback">Feedback</a>
-                <a class="dropdown-item" href="footFeedback.html#jasa">Jasa Render</a>
-                <a class="dropdown-item" href="footFeedback.html#jasa">Jasa Gambar</a>
+                <a class="dropdown-item" href="footFeedback.html#jasa">Services</a>
+                
                 <!-- <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="g_page.php">See More...</a> -->
               </div>
@@ -93,7 +93,7 @@
                 Random
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="randomPatchNote.html">Patch Notes</a>
+                <a class="dropdown-item" href="randomPatchNote.html">Patch Notes ༼ つ ◕_◕ ༽つ</a>
                 <a class="dropdown-item" href="" onclick="BlockedTest()">Wangy maker</a>
                 <!-- <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="g_page.php">See More...</a> -->
@@ -231,27 +231,13 @@
                   <a data-toggle="collapse" href="#collapseMainJasa" role="button" aria-expanded="false"
                     aria-controls="collapseMainDonate">
                     <div class="btn-primary text-center rounded-corner border score mb-1">
-                      Jasa Serayu
+                      Services
                     </div>
                   </a>
                   <hr>
 
                   <div class="collapse show " id="collapseMainJasa">
-                    <h2>Jasa Render</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ut porta
-                      ante. Mauris in ante sit amet nisi imperdiet ultrices eget sit amet leo.
-                      Nullam ultricies vestibulum suscipit. Nunc blandit in enim sed luctus. Sed
-                      sodales augue elit, vitae finibus arcu gravida id. Maecenas id augue eget
-                      turpis hendrerit iaculis nec eu mi. Etiam sit amet ante dignissim, egestas
-                      eros suscipit, feugiat nibh. Quisque volutpat nec sem sed viverra.</p>
-
-                    <h2>Jasa Gambar</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ut porta
-                      ante. Mauris in ante sit amet nisi imperdiet ultrices eget sit amet leo.
-                      Nullam ultricies vestibulum suscipit. Nunc blandit in enim sed luctus. Sed
-                      sodales augue elit, vitae finibus arcu gravida id. Maecenas id augue eget
-                      turpis hendrerit iaculis nec eu mi. Etiam sit amet ante dignissim, egestas
-                      eros suscipit, feugiat nibh. Quisque volutpat nec sem sed viverra.</p>
+                    <h2>Services</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ut porta
                       ante. Mauris in ante sit amet nisi imperdiet ultrices eget sit amet leo.
                       Nullam ultricies vestibulum suscipit. Nunc blandit in enim sed luctus. Sed
