--- a/footPrivacyPolicy.html
+++ b/footPrivacyPolicy.html
@@ -81,8 +81,8 @@
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="footFeedback.html#donasi">Donasi</a>
                 <a class="dropdown-item" href="footFeedback.html#feedback">Feedback</a>
-                <a class="dropdown-item" href="footFeedback.html#jasa">Jasa Render</a>
-                <a class="dropdown-item" href="footFeedback.html#jasa">Jasa Gambar</a>
+                <a class="dropdown-item" href="footFeedback.html#jasa">Services</a>
+                
                 <!-- <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="g_page.php">See More...</a> -->
               </div>
@@ -93,7 +93,7 @@
                 Random
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="randomPatchNote.html">Patch Notes</a>
+                <a class="dropdown-item" href="randomPatchNote.html">Patch Notes ༼ つ ◕_◕ ༽つ</a>
                 <a class="dropdown-item" href="" onclick="BlockedTest()">Wangy maker</a>
                 <!-- <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="g_page.php">See More...</a> -->
@@ -164,7 +164,7 @@
                     <p>Serayu Fansub follows a standard procedure of using log files. These files
                       log visitors when they visit websites. All hosting companies do this and a
                       part of hosting services' analytics. The information collected by log files
-                      include internet protocol (IP) addresses, browser type, Internet Service
+                      include internet protocol (IP) addresses, browser type, Internet Services
                       Provider (ISP), date and time stamp, referring/exit pages, and possibly the
                       number of clicks. These are not linked to any information that is personally
                       identifiable. The purpose of the information is for analyzing trends,
