--- a/typeSpecial.html
+++ b/typeSpecial.html
@@ -93,8 +93,8 @@
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" href="footFeedback.html#donasi">Donasi</a>
                                 <a class="dropdown-item" href="footFeedback.html#feedback">Feedback</a>
-                                <a class="dropdown-item" href="footFeedback.html#jasa">Jasa Render</a>
-                                <a class="dropdown-item" href="footFeedback.html#jasa">Jasa Gambar</a>
+                                <a class="dropdown-item" href="footFeedback.html#jasa">Services</a>
+                                
                                 <!-- <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="g_page.php">See More...</a> -->
                             </div>
@@ -105,7 +105,7 @@
                                 Random
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="randomPatchNote.html">Patch Notes</a>
+                                <a class="dropdown-item" href="randomPatchNote.html">Patch Notes ༼ つ ◕_◕ ༽つ</a>
                                 <a class="dropdown-item" href="" onclick="BlockedTest()">Wangy maker</a>
                                 <!-- <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="g_page.php">See More...</a> -->
