--- a/footAboutUs.html
+++ b/footAboutUs.html
@@ -230,7 +230,7 @@
             </div>
 
             <div class="col-12 col-sm-6 col-lg-12 mb-4 d-flex justify-content-center">
-              <a href="randomPatchNote.html">
+              <a href="PatchNotesVer-2-1.html">
                 <img src="img/banner_gform.png" alt="">
               </a>
             </div>
