--- a/typeSpecial.html
+++ b/typeSpecial.html
@@ -212,7 +212,7 @@
         <div class="col-12">
           <div class="row justify-content-center">
             <div class="col-12 col-sm-6 col-lg-12 mb-4 d-flex justify-content-center">
-              <a href="randomPatchNote.html">
+              <a href="PatchNotesVer-2-1.html">
                 <img src="img/banner_gform.png" alt="">
               </a>
             </div>
