commit ReWork Design - patch notes 1

--- a/PatchNotesVer-2-1.html
+++ b/PatchNotesVer-2-1.html
@@ -150,7 +150,7 @@
                   <div class="collapse show " id="collapseMainJasa">
                     <h2>Patch Notes</h2>
                     <h3>SeraYu Version 2.1</h3>
-                    <h4>Design Rework Foundation and Design Rework ༼ つ ◕_◕ ༽つ</h4>
+                    <h4>Foundation and Design Rework ༼ つ ◕_◕ ༽つ</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ut porta
                       ante. Mauris in ante sit amet nisi imperdiet ultrices eget sit amet leo.
                       Nullam ultricies vestibulum suscipit. Nunc blandit in enim sed luctus. Sed
