--- a/tutorialPages.html
+++ b/tutorialPages.html
@@ -11,14 +11,6 @@
     <!-- css bootstrap -->
     <link href="vendor/css/bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-
-    <!-- css bagguete box-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css" />
-
-    <!-- css gallery-->
-    <link rel="stylesheet" href="css/grid-gallery.css">
-
 
     <!-- Css main-->
     <link rel="stylesheet" href="css/styleMain.css">
@@ -37,7 +29,6 @@
 <body>
     <!-- JavaScript -->
     <script src="js/scriptMain.js"></script>
-
 
 
 
@@ -151,7 +142,7 @@
     <!-- #Content-->
     <div class="container">
         <div class="row">
-            <div class="col-12 col-lg-12 mb-4">
+            <div class="col-12 col-lg-9 mb-4">
                 <div class="row">
 
                     <!-- #Iklan Box-->
@@ -166,69 +157,43 @@
                     <div class="col-12">
                         <div class="row">
 
-                            <section class="gallery-block grid-gallery">
-                                <div class="container">
-                                    <div class="row">
-                                        <div class="col-md-6 col-lg-4 item ">
-                                            <a class="lightbox" href="img/Screenshot/KimiNoNawa/Screenshot (316).png" data-caption="Kimi No Nawa">
-                                                <img class="img-fluid image scale-on-hover"
-                                                    src="img/Screenshot/KimiNoNawa/Screenshot (316).png">
-                                            </a>
-                                        </div>
-                                        <div class="col-md-6 col-lg-4 item ">
-                                            <a class="lightbox" href="img/gallery/Yuuki_cr.png" data-caption="Yuuki Character By yuuki">
-                                                <img class="img-fluid image scale-on-hover"
-                                                    src="img/gallery/Yuuki_cr.png">
-                                            </a>
-                                        </div>
-                                        <div class="col-md-6 col-lg-4 item ">
-                                            <a class="lightbox" href="img/Screenshot/MajoNoTabi/Screenshot (113).png" data-caption="Majo no Tabitabi">
-                                                <img class="img-fluid image scale-on-hover"
-                                                    src="img/Screenshot/MajoNoTabi/Screenshot (113).png">
-                                            </a>
-                                        </div>
-                                        <div class="col-md-6 col-lg-4 item ">
-                                            <a class="lightbox" href="img/Screenshot/Horimiya/ss3.jpg" data-caption="Horimiya">
-                                                <img class="img-fluid image scale-on-hover"
-                                                    src="img/Screenshot/Horimiya/ss3.jpg">
-                                            </a>
-                                        </div>
-                                        <div class="col-md-6 col-lg-4 item ">
-                                            <a class="lightbox" href="img/Screenshot/MushokuTensei/Screenshot (68).png" data-caption="Mushoku Tensei">
-                                                <img class="img-fluid image scale-on-hover"
-                                                    src="img/Screenshot/MushokuTensei/Screenshot (68).png">
-                                            </a>
-                                        </div>
-                                        <div class="col-md-6 col-lg-4 item ">
-                                            <a class="lightbox" href="img/gallery/va11halla.png" data-caption="Va11 Hall-A">
-                                                <img class="img-fluid image scale-on-hover"
-                                                    src="img/gallery/va11halla.png">
-                                            </a>
-                                        </div>
-                                        <div class="col-md-6 col-lg-4 item ">
-                                            <a class="lightbox" href="img/Screenshot/TenkiNoKo/Screenshot (261).png" data-caption="Tenki No Ko"></a>
-                                                <img class="img-fluid image scale-on-hover"
-                                                    src="img/Screenshot/TenkiNoKo/Screenshot (261).png">
-                                            </a>
-                                        </div>
-                                        <div class="col-md-6 col-lg-4 item ">
-                                            <a class="lightbox" href="img/Screenshot/VioletOva/Screenshot (343).png" data-caption="Violet Evergarden">
-                                                <img class="img-fluid image scale-on-hover"
-                                                    src="img/Screenshot/VioletOva/Screenshot (343).png">
-                                            </a>
-                                        </div>
-                                        <div class="col-md-6 col-lg-4 item ">
-                                            <a class="lightbox" href="img/Screenshot/ToaruRailgunT/Screenshot (83).png" data-caption="Toaru Railgun T">
-                                                <img class="img-fluid image scale-on-hover"
-                                                    src="img/Screenshot/ToaruRailgunT/Screenshot (83).png">
-                                            </a>
-                                        </div>
+                            <!-- #Anime Latest Update-->
+                            <div class="col-12 px-3 py-1 text-justify">
+                                <a href="tutorialPages.html">
+                                    <div class="btn-primary text-center rounded-corner border score mb-1">
+                                        Tutorial
                                     </div>
+                                </a>
+                            </div>
+                            <!-- #EndAnime Latest Update-->
+
+                            <!-- #CardUpdate-->
+                            <div class="col-12 mb-3 rounded-corner">
+                                <a class="btn btn-primary btn-block round-type" href="#"> </a>
+                                <div class="card updateCard round-download">
+                                    <a href="#">
+                                        <div class="row no-gutters">
+                                            <div class="imgContainer"  >
+                                                <img src="img/Screenshot/KimiNoNawa/Screenshot (317).png"
+                                                    class="updateCardImg">
+                                                <div class="card-img-overlay anchor-bg-color-update overlay">
+                                                </div>
+                                            </div>
+                                            <div class="descContainer">
+                                                <div class="card-body cardUpdate">
+                                                    <h6 class="card-title cardUpdate">Cara download di Serayu </h6>
+                                                    <p class="card-text "><small class="text-muted">Release : March
+                                                            20th, 2021</small></p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </a>
                                 </div>
-                            </section>
+                            </div>
+                            <!-- #CardUpdate -->
 
                             <!-- #Pagination-->
-                            <div class="col-12">
+                            <div class="col-12 mt-4">
                                 <nav aria-label="Page navigation example">
                                     <ul class="pagination justify-content-center">
                                         <li class="page-item"><a class="page-link">Previous</a></li>
@@ -254,6 +219,49 @@
 
                 </div>
             </div>
+
+            <!-- #Sidebar-->
+      <div class="col-12 col-lg-3 float-right">
+        <div class="col-12">
+          <div class="row justify-content-center">
+            <div class="col-12 col-sm-6 col-lg-12 mb-4 d-flex justify-content-center">
+              <a href="patchNotesVer-2-1.html">
+                <img src="img/banner_gform.png" alt="">
+              </a>
+            </div>
+
+            <div class="col-12 col-sm-6 col-lg-12 mb-4 d-flex justify-content-center ">
+              <iframe id="if-id" width="240" height="235" src="https://trakteer.id/serayu/stream/target?key=trstream-JQHcdahtgH9eoM1mgjFw&t_bgclr=rgba%2832%2C+104%2C+241%2C+1%29&t_fgclr=rgba%28250%2C+250%2C+250%2C+1%29&t_hgclr=rgba%28255%2C+193%2C+7%2C+0.8156862745098039%29&t_showlink=true&t_txtshadow=false" frameborder="0"></iframe>
+              <a id="a-id" href="https://trakteer.id/serayu"></a>
+            </div>
+
+            <div class="col-12 col-sm-6 col-lg-12 mb-4 d-flex justify-content-center ">
+              <iframe src="https://discord.com/widget?id=788456247476617326&theme=dark" width="225" height="350"
+                allowtransparency="true" frameborder="0"
+                sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+            </div>
+            
+          </div>
+        </div>
+        <div class="col-12 sticky-top">
+          <div class="row justify-content-center">
+            <div class="col-12 col-sm-6 col-lg-12 mb-4 d-flex justify-content-center ">
+              <iframe
+                src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fserayufansub60fps%2F&tabs=timeline&width=225&height=300&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
+                width="225" height="300" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
+                allowfullscreen="true"
+                allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+            </div>
+
+            <div class="col-12 col-sm-6 col-lg-12 mb-4 d-flex justify-content-center example">
+              <iframe width="240" height="400" src="https://trakteer.id/serayu/stream/top-supporters?key=trstream-JQHcdahtgH9eoM1mgjFw&ts_bgclr=rgba%280%2C+123%2C+255%2C+0.8156862745098039%29&ts_hg1clr=rgba%28255%2C+193%2C+7%2C+1%29&ts_hg2clr=rgba%28163%2C+53%2C+238%2C+1%29&ts_hg3clr=rgba%280%2C+112%2C+221%2C+1%29&ts_interval=30&ts_customtitle=Yang+Beliin+D.Vid+Sempak&ts_customsubtitle=Kawan+D.Vid" frameborder="0"></iframe>
+            </div>
+
+          </div>
+        </div>
+
+      </div>
+      <!-- #endSidebar -->
 
         </div>
 
@@ -295,12 +303,7 @@
   </script>
   <!-- #endJavaScript -->
 
-    <!-- #GalleryScript-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
-    <script>
-        baguetteBox.run('.grid-gallery', {captions: true, animation: 'slideIn' });
-    </script>
-    <!-- #endGalleryScript -->
+
 
 </body>
 
