--- a/footAboutUs.html
+++ b/footAboutUs.html
@@ -100,7 +100,7 @@
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="" onclick="BlockedMagerTest()">Tutorial</a>
+              <a class="nav-link" href="tutorialPages.html" onclick="BlockedMagerTest()">Tutorial</a>
             </li>
             <li class="nav-item mx-xl-2 ">
               <form class="form-inline my-2 my-xl-0">
@@ -230,7 +230,7 @@
             </div>
 
             <div class="col-12 col-sm-6 col-lg-12 mb-4 d-flex justify-content-center">
-              <a href="PatchNotesVer-2-1.html">
+              <a href="patchNotesVer-2-1.html">
                 <img src="img/banner_gform.png" alt="">
               </a>
             </div>
