--- a/randomPatchNote.html
+++ b/randomPatchNote.html
@@ -112,7 +112,7 @@
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="" onclick="BlockedMagerTest()">Tutorial</a>
+                            <a class="nav-link" href="tutorialPages.html" onclick="BlockedMagerTest()">Tutorial</a>
                         </li>
                         <li class="nav-item mx-xl-2 ">
                             <form class="form-inline my-2 my-xl-0">
@@ -169,9 +169,9 @@
 
                             <!-- #CardUpdate-->
                             <div class="col-12 mb-3 rounded-corner">
-                                <a class="btn btn-primary btn-block round-type" href="PatchNotesVer-2-1.html"> </a>
+                                <a class="btn btn-primary btn-block round-type" href="patchNotesVer-2-1.html"> </a>
                                 <div class="card updateCard round-download">
-                                    <a href="PatchNotesVer-2-1.html">
+                                    <a href="patchNotesVer-2-1.html">
                                         <div class="row no-gutters">
                                             <div class="imgContainer"  >
                                                 <img src="img/Screenshot/KimiNoNawa/Screenshot (317).png"
@@ -225,7 +225,7 @@
         <div class="col-12">
           <div class="row justify-content-center">
             <div class="col-12 col-sm-6 col-lg-12 mb-4 d-flex justify-content-center">
-              <a href="PatchNotesVer-2-1.html">
+              <a href="patchNotesVer-2-1.html">
                 <img src="img/banner_gform.png" alt="">
               </a>
             </div>
