commit ReWork Design - sidebar Anchor

--- a/typeTv.html
+++ b/typeTv.html
@@ -325,6 +325,7 @@
 
             <div class="col-12 col-sm-6 col-lg-12 mb-4 d-flex justify-content-center example">
               <iframe width="240" height="400" src="https://trakteer.id/serayu/stream/top-supporters?key=trstream-JQHcdahtgH9eoM1mgjFw&ts_bgclr=rgba%280%2C+123%2C+255%2C+0.8156862745098039%29&ts_hg1clr=rgba%28255%2C+193%2C+7%2C+1%29&ts_hg2clr=rgba%28163%2C+53%2C+238%2C+1%29&ts_hg3clr=rgba%280%2C+112%2C+221%2C+1%29&ts_interval=30&ts_customtitle=Yang+Beliin+D.Vid+Sempak&ts_customsubtitle=Kawan+D.Vid" frameborder="0"></iframe>
+              <a id="a-id" href="https://trakteer.id/serayu"></a>
             </div>
 
           </div>
