commit ReWork Design - card loading REVERT

--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
                   <a class="btn btn-success btn-block round-type" href="typeMovie.html"> Movie </a>
                 </div>
                 <div class="card">
-                  <a href="animePagesKimiNoNawa.html" class="myshow"><div class="card-lbl-top"><img class="card-img-top "
-                    src="img/Anime/Kimi_no_nawa.png"></div>
+                  <a href="animePagesKimiNoNawa.html" class="myshow"><img class="card-img-top "
+                      src="img/Anime/Kimi_no_nawa.png">
                     <div class="card-img-overlay anchor-bg-color overlay">
                       <h6 class="card-title img-overlay-anchor"><strong>Kimi No Na wa.</strong></h6>
                       <small class="text-white">Post on 20-03-2020</small>
